GUI für Kundenmaske Eyad